--- a/TasksSheduler/Model/Model.csproj
+++ b/TasksSheduler/Model/Model.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ABDF2E74-713F-4C56-9976-CBB00BFC7A6C}</ProjectGuid>
+    <ProjectGuid>{B9E26756-EB6E-475C-B304-A6E8A2054CB3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Model</RootNamespace>
@@ -31,7 +31,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,14 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Gambler.cs" />
-    <Compile Include="IntHelper.cs" />
-    <Compile Include="Jay.cs" />
-    <Compile Include="NewNumberEventArgs.cs" />
-    <Compile Include="Numbertron.cs" />
+    <Compile Include="AutoGroup.cs" />
+    <Compile Include="UserTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Randomizer.cs" />
-    <Compile Include="SilentBob.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
