--- a/TasksSheduler/ViewModel/ViewModel.csproj
+++ b/TasksSheduler/ViewModel/ViewModel.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ABDF2E74-713F-4C56-9976-CBB00BFC7A6C}</ProjectGuid>
+    <ProjectGuid>{0B995B76-C282-47CC-935D-BE0D7FF4B038}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Model</RootNamespace>
-    <AssemblyName>Model</AssemblyName>
+    <RootNamespace>ViewModel</RootNamespace>
+    <AssemblyName>ViewModel</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,14 +40,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Gambler.cs" />
-    <Compile Include="IntHelper.cs" />
-    <Compile Include="Jay.cs" />
-    <Compile Include="NewNumberEventArgs.cs" />
-    <Compile Include="Numbertron.cs" />
+    <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="TasksViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Randomizer.cs" />
-    <Compile Include="SilentBob.cs" />
+    <Compile Include="TreeViewModel.cs" />
+    <Compile Include="ViewModelBase1.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{b9e26756-eb6e-475c-b304-a6e8a2054cb3}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
