--- a/View/Model/Model.csproj
+++ b/View/Model/Model.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ABDF2E74-713F-4C56-9976-CBB00BFC7A6C}</ProjectGuid>
+    <ProjectGuid>{25CC2843-069A-4490-99F7-17EC56F984C7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Model</RootNamespace>
@@ -40,14 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Gambler.cs" />
-    <Compile Include="IntHelper.cs" />
-    <Compile Include="Jay.cs" />
-    <Compile Include="NewNumberEventArgs.cs" />
-    <Compile Include="Numbertron.cs" />
+    <Compile Include="Book.cs" />
+    <Compile Include="Course.cs" />
+    <Compile Include="Department.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Randomizer.cs" />
-    <Compile Include="SilentBob.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
