--- a/View/ViewModel/ViewModel.csproj
+++ b/View/ViewModel/ViewModel.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ABDF2E74-713F-4C56-9976-CBB00BFC7A6C}</ProjectGuid>
+    <ProjectGuid>{26902E63-416F-4D22-B3DE-1992285F4FCE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Model</RootNamespace>
-    <AssemblyName>Model</AssemblyName>
+    <RootNamespace>ViewModel</RootNamespace>
+    <AssemblyName>ViewModel</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,14 +40,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Gambler.cs" />
-    <Compile Include="IntHelper.cs" />
-    <Compile Include="Jay.cs" />
-    <Compile Include="NewNumberEventArgs.cs" />
-    <Compile Include="Numbertron.cs" />
+    <Compile Include="CourseViewModel.cs" />
+    <Compile Include="DepartmentViewModel.cs" />
+    <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="TreeViewModel.cs" />
+    <Compile Include="ViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Randomizer.cs" />
-    <Compile Include="SilentBob.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{25CC2843-069A-4490-99F7-17EC56F984C7}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
